small changes to the card container in ChallengePage component to fix gaps

--- a/src/components/P5AP_ChallengePage/ChallengePage.scss
+++ b/src/components/P5AP_ChallengePage/ChallengePage.scss
@@ -61,6 +61,11 @@
     .card-container {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
+        row-gap: 42px;
+        column-gap: 48px;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 0 24px;
     }
 }
